--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
-    "@types/helmet": "^4.0.0",
     "@types/morgan": "^1.9.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
@@ -21,5 +21,9 @@
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/helmet": "^4.0.0"
   }
 }
