--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/helmet": "^4.0.0"
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.6"
   }
 }
