--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -20,12 +21,17 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/helmet": "^4.0.0",
-    "@types/jsonwebtoken": "^8.5.6"
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6"
   }
 }
