--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,7 @@ services:
         - db
     volumes:
         - "./:/api"
+        - "/api/node_modules"
     env_file:
         - ./.dev.env
     ports:
