--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "portafolio-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "nodemon -L src/index.ts"
+    "dev": "nodemon -L src/index.ts",
+    "start": "node ./dist/index.js",
+    "build": "rimraf dist && tsc"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +25,7 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
