--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,7 +13,7 @@ services:
         - "./:/api"
         - "/api/node_modules"
     env_file:
-        - ./.dev.env
+        - ./.prod.env
     ports:
       - "4000:4000"
     networks:
