develop: Added env file

--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -1,9 +1,13 @@
 FROM node:16.13.1
 
-WORKDIR /api
+RUN mkdir -p /usr/src/api
 
-COPY . .
+WORKDIR /usr/src/api
+
+COPY package.*json /usr/src/api/
 
 RUN npm install
+
+COPY . /usr/src/api/
 
 RUN npm run build
