--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon -L src/index.ts",
-    "start": "node ./dist/index.js",
+    "start": "node dist/index.js",
     "build": "rimraf dist && tsc"
   },
   "keywords": [],
