--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
         - db
     ports:
-      - "4000:4000" 
+      - "${PORT}:${PORT}" 
     networks:
         - api-net
     command: npm start 
