--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   api:
     container_name: api
+    restart: always
     build:
       context: ./
       dockerfile: dockerfile.prod
