--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   api:
-    container_name: api
+    container_name: api_portafolio
     build:
       context: ./
       dockerfile: dockerfile.dev
@@ -18,7 +18,7 @@ services:
     command: npm run dev 
   db:
     image: mysql
-    container_name: mysql
+    container_name: mysql_posrtafolio
     networks:
       - api-net
     environment:
