--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,7 +18,7 @@ services:
     command: npm run dev 
   db:
     image: mysql
-    container_name: mysql_posrtafolio
+    container_name: mysql_portafolio
     networks:
       - api-net
     environment:
