--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -21,6 +19,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
@@ -32,9 +31,14 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.7",
-    "@types/passport-jwt": "^3.0.6"
+    "@types/passport-jwt": "^3.0.6",
+    "@types/uuid": "^8.3.4",
+    "uuid": "^8.3.2"
   }
 }
