--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http{
     server{
          listen 80;
          client_max_body_size 10m;
-         server_name localhost;
+         server_name localhost www.api-drojascam.com api-drojascam.com;
 
          location /api {
              proxy_pass http://api:8000;
